# label-printer-driver

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
exceptions/: PrinterError.cpp  PrinterError.h  USBError.cpp  USBError.h
label/: Label.cpp  Label.h  LabelCreator.cpp  LabelCreator.h  ProductLabel.cpp  ProductLabel.h  ProductLabelCreator.cpp  ProductLabelCreator.h  label_conf.yml  label_def_example.yml
printer/: Printer.cpp  Printer.h  PrinterJobData.cpp  PrinterJobData.h  PrinterStatus.cpp  PrinterStatus.h
